# manx-reg-rag

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  config.py  docker-compose.yml  globals.py  launch.sh  pyproject.toml
app/: llm.py  query.py  server.py  startup_checks.py
data/qdrant/: meta.json
data/qdrant/collection/aml_code_test/: storage.sqlite
data/qdrant/collection/manx-reg-rag-db/: storage.sqlite
db_ops/: embeddings.py  retrieval.py  retrieved_chunk.py
extraction_ops/: chunk.py  chunking.py  definitions.py  ingest.py  test_extraction.py
extraction_ops/specs/: aml_code.py  aml_handbook.py  fiu_act.py  poca_2008.py  shared_funcs.py  specs.py  supplemental_information_document.py  terrorism_and_crime.py
scripts/: ingest.py  query.py  test_extraction.py
scripts/extraction_specs/: aml_code.py  aml_handbook.py  chunk.py  config.py  specs.py
src/manx_reg_rag/: __init__.py  embeddings.py
web/: app.js  index.html  style.css
