[project]
name = "manx-reg-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "cam01h", email = "cam01houston@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
  "fastembed>=0.8.0",
  "pydantic>=2.13.4",
  "pymupdf4llm>=1.27.2.3",
  "qdrant-client>=1.18.0",
]

[project.scripts]
manx-reg-rag = "manx_reg_rag:main"

[tool.uv]
package = false
