[project]
name = "manx-reg-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "cam01h", email = "cam01houston@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.136.3",
  "fastembed>=0.8.0",
  "pydantic>=2.13.4",
  "pydantic-ai>=1.106.0",
  "pymupdf4llm>=1.27.2.3",
  "python-dotenv>=1.2.2",
  "qdrant-client>=1.18.0",
  "uvicorn>=0.49.0",
]

[project.scripts]
manx-reg-rag = "manx_reg_rag:main"

[tool.uv]
package = false
